trying things to fix hidden button on iphone

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -27,8 +27,8 @@ fcs-add-button .md-button.add-button-tab {
     position: fixed;
     bottom: 0;
     right: 40px;
-    height: 50px;
-    width: 65px;
+    height: 35px;
+    width: 50px;
     z-index: 999;
     background: rgba(252, 68, 130, 0.5);
     border-radius: 3px 3px 0 0;
